# robo-arm

./: .gitignore  DIRECT_CONTROL_PLAN.md  README.md  codex-update.sh  esp.py  pyproject.toml  receiver.py
.claude/: settings.local.json
docs/: RoArm-M2-S_JSON_Command_Families_Waveshare_Wiki.md  RoArm-M2-S_JSON_Command_Meaning_Waveshare_Wiki.md  RoArm-M2-S_JSON_Command_Reference.md  RoArm-M2-S_Python_UART_Communication_Waveshare_Wiki.md  RoArm-M2-S_ROS2_Waveshare_Reference.md  RoArm-M2-S_Waveshare_Wiki.md  mac-pi-dev-workflow.md  roarm-m2s-ros2-vla-project-plan.md
esp32-camera/include/: camera_pins.h
esp32-camera/src/: main.cpp
experiments/: README.md  main.py  pyproject.toml  test_pi.py
log/: latest_version-check
nodes/: _util.py  arm.py  cam.py  cmd.py  launch.py  monitor.py  record.py  replay.py  snap.py
pi/: README.md  esp.py  launch.py  pyproject.toml
pi/esp32-camera/: platformio.ini
pi/esp32-camera/src/: main.cpp
pi/nodes/: _arm.py  _image.py  _recording.py  _util.py  arm.py  cam.py  cam0.py  cam1.py  cam2.py  control_manager.py  monitor.html  monitor.py  policy_client.py  record.py  record_manager.py  replay.py  teleop.py
pi/openpi_client/: base_policy.py  image_tools.py  msgpack_numpy.py  websocket_client_policy.py
pi/scripts/: install_pi_service.sh  run_pi_stack.sh
pi/systemd/: robo-arm.service
policy_server/: README.md  demo_policy.py  policy_demo.py  policy_pi05.py  policy_replay.py  pyproject.toml  replay_policy.py  server.py
scripts/: deploy_pi.sh  record_pi.sh  replay_pi.sh
sim/: README.md  demo.py  env.py  policy_loop.py  pyproject.toml  roarm.xml  roarm_converted.xml  roarm_description.urdf
sim/reach/: collect.py  eval.py  policy.py  reach_env.py  train.py
sim/runs/reach/eval_logs/: evaluations.npz
sim/runs/reach/tb/PPO_1/: events.out.tfevents.1773151641.PI-MAC-FCVQXV4R7J.local.51255.0
sim/runs/reach/tb/PPO_2/: events.out.tfevents.1773152580.PI-MAC-FCVQXV4R7J.local.56151.0
src/roarm/: __init__.py  arm.py  config.py  dual.py  main.py  ports.py
training/: dataloader.py  hello.py  pyproject.toml  test.py
