[project]
name = "robo-arm-experiments"
version = "0.1.0"
description = "Mac-only experiments for the robo-arm repo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lerobot[pi]",
    "scipy>=1.10.1,<1.15",
    "transformers>=4.57.6",
]

[tool.uv]
package = false
python-preference = "only-system"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "fix/lerobot_openpi" }

[tool.basedpyright]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ipykernel>=7.2.0",
]
