[project]
name = "robo-arm-pi"
version = "0.1.0"
description = "Raspberry Pi runtime for the robo-arm project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "RPi.GPIO",
    "datasets>=4.0.0",
    "esptool",
    "huggingface_hub>=0.35.3",
    "numpy>=2.4.2",
    "pandas",
    "platformio>=6.1.19",
    "pillow",
    "pyarrow",
    "pyserial",
    "spidev",
]

[tool.uv]
package = true
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
esp = "esp:main"
arm = "nodes.arm:main"
cam = "nodes.cam:main"
cmd = "nodes.cmd:main"
record = "nodes.record:main"
replay = "nodes.replay:main"
monitor = "nodes.monitor:main"
