[project]
name = "robo-arm-policy-server"
version = "0.1.0"
description = "Policy inference server for the robo-arm project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = true
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
policy-server = "server:main"
