[project]
name = "robo-arm-policy-server"
version = "0.1.0"
description = "Policy inference server for the robo-arm project"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.116.1",
    "huggingface-hub>=0.35.3",
    "lerobot>=0.4.4,<0.5",
    "numpy>=2.4.2",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = true
python-preference = "only-system"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "fix/lerobot_openpi" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
policy-server = "server:main"
serve-policy = "server:main"
