[project]
name = "robo-arm-sim"
version = "0.1.0"
description = "MuJoCo simulation for the RoArm-M2-S"

requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.1.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[tool.uv]
package = true
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
