[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lerobot>=0.4.4,<0.5",
    "matplotlib>=3.9,<3.11",
    "scipy>=1.10.1,<1.15",
    "transformers>=4.57.6",
]

[tool.uv]
package = false
python-preference = "only-system"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "fix/lerobot_openpi" }
